:bug: Fix graphical bug where an extra space is added between the organization and the contributors text

--- a/src/app/shared/learning-object/learning-object.component.scss
+++ b/src/app/shared/learning-object/learning-object.component.scss
@@ -285,11 +285,6 @@ a {
   }
 }
 
-
-.author {
-  text-transform: capitalize
-}
-
 @keyframes loading {
   0% {
     left: -200px;
